@@ -1,3 +1,7 @@
+2008-08-11  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* library/http/http.tcl: Remove 8.5 requirement.
+
 2008-08-11  Andreas Kupries  <andreask@activestate.com>
 
 	* library/tm.tcl: Added a 'package provide' command to the
